...
    <string name="add_buddy_icon">Add Buddy Icon</string>
    <string name="remove_buddy_icon">Remove Buddy Icon</string>
    <string name="add_buddy">Add Buddy</string>
    <string name="remove_buddy">Remove Buddy</string>
    <string name="message_icon">Message Icon</string>
    <string name="message">Message</string>
    <string name="classes">Classes</string>
    <string name="class_01">Class 01</string>
    <string name="class_02">Class 02</string>
    <string name="class_03">Class 03</string>
    <string name="class_04">Class 04</string>
    <string name="class_05">Class 05</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="profile_image">Profile Image</string>
    <string name="joinGroup">Join Group</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="addBuddy">Add Buddy</string>
    <string name="removeBuddy">Remove Buddy</string>

...
